12.2.1 (14-01-2025)
- Bug Fix: In debt and payment reports, exclude personal emails which the property currentPartyContact is not null [#qubIT-Fenix-6541]
- Bug Fix: In PersonCustomer#findUnique(), fix the sort comparator to consider active customers as highest precedence than from person merge [#qubIT-Fenix-6386]

12.2.0 (08-01-2025)
- Improvement: Configure recalculation of tuition installments in tuition payment plan [#qubIT-Fenix-6235]
- Improvement: Support recalculation from tuition payment plan in manual tuition creation [#qubIT-Fenix-6235]

12.1.1 (16-12-2024)
- Bug Fix: When retrieving the PersonCustomer#getActiveCustomer(), validate that the customer found it is active. If it is not, throw exception [#qubIT-Fenix-6386]

12.1.0 (12-12-2024)
- Bug Fix: Avoid NPE when reading debts accounts for report [#qubIT-Fenix-6052]
- New Feature: Tuition Payment Plan Allocations [#qubIT-Fenix-6235]

12.0.3 (27-11-2024)
- Improvement: Improves DebtAccountReportEntryBean by adding active registrations field [#qubIT-Fenix-6052]

12.0.2 (19-11-2024)
- Improvement: Add unique degree and execution year to existing report [#qubIT-Fenix-6110]

12.0.1 (18-11-2024)
- Bug Fix: Fix calculation of registration tuition including other events for the same degree and execution interval, but excluding standalone and extracurricular tuitions [#qubIT-Fenix-6109]

12.0.0 (25-10-2024)
- New feature: Finantial document series by finantial entity [#qubIT-Fenix-5456]

11.18.1 (14-10-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

11.18.0 (10-10-2024)
- Refactor: Apply pluggable validation in creation of customers [#qubIT-Fenix-5910]

11.17.8 (30-09-2024)
- Improvement: Add key to registration tuition debt concatenation, to have the degree simple name [#qubIT-Fenix-5846]
- Bug Fix: In calculation for tuition debts using the new registration tuition service, avoid closing debit notes to decrement amounts by product [#qubIT-Fenix-5854]
