@@ -1,37 +1,27 @@
 /**
- * Copyright (c) 2015, Quorum Born IT <http://www.qub-it.com/>
- * All rights reserved.
+ * Copyright (c) 2015, Quorum Born IT <http://www.qub-it.com/> All rights reserved.
  *
- * Redistribution and use in source and binary forms, without modification, are permitted
- * provided that the following conditions are met:
+ * Redistribution and use in source and binary forms, without modification, are permitted provided that the following conditions
+ * are met:
  *
- * * Redistributions of source code must retain the above copyright notice, this list of
- * conditions and the following disclaimer.
- * * Redistributions in binary form must reproduce the above copyright notice, this list
- * of conditions and the following disclaimer in the documentation and/or other materials
- * provided with the distribution.
- * * Neither the name of Quorum Born IT nor the names of its contributors may be used to
- * endorse or promote products derived from this software without specific prior written
- * permission.
- * * Universidade de Lisboa and its respective subsidiary Serviços Centrais da Universidade
- * de Lisboa (Departamento de Informática), hereby referred to as the Beneficiary, is the
- * sole demonstrated end-user and ultimately the only beneficiary of the redistributed binary
- * form and/or source code.
- * * The Beneficiary is entrusted with either the binary form, the source code, or both, and
- * by accepting it, accepts the terms of this License.
- * * Redistribution of any binary form and/or source code is only allowed in the scope of the
- * Universidade de Lisboa FenixEdu(™)’s implementation projects.
- * * This license and conditions of redistribution of source code/binary can only be reviewed
- * by the Steering Comittee of FenixEdu(™) <http://www.fenixedu.org/>.
+ * * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
+ * * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following
+ * disclaimer in the documentation and/or other materials provided with the distribution. * Neither the name of Quorum Born IT nor
+ * the names of its contributors may be used to endorse or promote products derived from this software without specific prior
+ * written permission. * Universidade de Lisboa and its respective subsidiary Serviços Centrais da Universidade de Lisboa
+ * (Departamento de Informática), hereby referred to as the Beneficiary, is the sole demonstrated end-user and ultimately the only
+ * beneficiary of the redistributed binary form and/or source code. * The Beneficiary is entrusted with either the binary form,
+ * the source code, or both, and by accepting it, accepts the terms of this License. * Redistribution of any binary form and/or
+ * source code is only allowed in the scope of the Universidade de Lisboa FenixEdu(™)’s implementation projects. * This license
+ * and conditions of redistribution of source code/binary can only be reviewed by the Steering Comittee of FenixEdu(™)
+ * <http://www.fenixedu.org/>.
  *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS
- * OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY
- * AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL “Quorum Born IT” BE
- * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
- * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA,
- * OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
- * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
- * OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING,
+ * BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT
+ * SHALL “Quorum Born IT” BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+ * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+ * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 package org.fenixedu.academictreasury.domain.debtGeneration.strategies;
 
@@ -254,8 +244,7 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
         final Set<DebitEntry> debitEntries = Sets.newHashSet();
 
         DebitEntry grabbedDebitEntry = null;
-        for (final AcademicDebtGenerationRuleEntry entry : rule
-                .getOrderedAcademicDebtGenerationRuleEntries() /* rule.getAcademicDebtGenerationRuleEntriesSet() */) {
+        for (final AcademicDebtGenerationRuleEntry entry : rule.getOrderedAcademicDebtGenerationRuleEntries() /* rule.getAcademicDebtGenerationRuleEntriesSet() */) {
             final Product product = entry.getProduct();
 
             if (AcademicTreasurySettings.getInstance().getTuitionProductGroup() == product.getProductGroup()) {
@@ -283,8 +272,8 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
         for (final DebitEntry debitEntry : debitEntries) {
 
             if (debitEntry.getFinantialDocument() == null) {
-                DebitNote debitNote = debitNotesMap.get(debitEntry.getPayorDebtAccount() != null ? debitEntry
-                        .getPayorDebtAccount() : debitEntry.getDebtAccount());
+                DebitNote debitNote = debitNotesMap.get(
+                        debitEntry.getPayorDebtAccount() != null ? debitEntry.getPayorDebtAccount() : debitEntry.getDebtAccount());
                 debitEntry.addToFinantialDocument(debitNote);
             }
 
@@ -317,7 +306,6 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
                     throw new AcademicTreasuryDomainException(
                             "error.AcademicDebtGenerationRule.debit.entries.not.aggregated.on.same.debit.note");
                 }
-
             }
         }
 
@@ -332,8 +320,9 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
                 }
 
                 final Product interestProduct = TreasurySettings.getInstance().getInterestProduct();
-                final Set<DebitEntry> treasuryEventDebitEntries = DebitEntry.findActive(treasuryEvent)
-                        .filter(d -> d.getProduct() != interestProduct).collect(Collectors.<DebitEntry> toSet());
+                final Set<DebitEntry> treasuryEventDebitEntries =
+                        DebitEntry.findActive(treasuryEvent).filter(d -> d.getProduct() != interestProduct)
+                                .collect(Collectors.<DebitEntry> toSet());
 
                 if (!treasuryEventDebitEntries.equals(debitEntries)) {
                     throw new AcademicTreasuryDomainException("error.AcademicDebtGenerationRule.not.all.debitEntries.aggregated");
@@ -365,13 +354,14 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
                 // where the student has to pay something, due to his short
                 // attendance in courses.
 
-                boolean forceCreation = entry.isCreateDebt() && entry.isForceCreation()
-                        && registration.getLastRegistrationState(executionYear) != null
-                        && registration.getLastRegistrationState(executionYear).isActive()
-                        && (!entry.isLimitToRegisteredOnExecutionYear() || registration.isFirstTime(rule.getExecutionYear()));
+                boolean forceCreation = entry.isCreateDebt() && entry.isForceCreation() && registration.getLastRegistrationState(
+                        executionYear) != null && registration.getLastRegistrationState(executionYear)
+                        .isActive() && (!entry.isLimitToRegisteredOnExecutionYear() || registration.isFirstTime(
+                        rule.getExecutionYear()));
 
-                boolean createdEnrolment = AcademicTaxServices.createAcademicTaxForEnrolmentDateAndDefaultFinantialEntity(
-                        registration, executionYear, academicTax, forceCreation);
+                boolean createdEnrolment =
+                        AcademicTaxServices.createAcademicTaxForEnrolmentDateAndDefaultFinantialEntity(registration,
+                                executionYear, academicTax, forceCreation);
 
                 if (createdEnrolment) {
                     processingResult.markRuleMadeUpdates();
@@ -425,10 +415,11 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
                 // where the student has to pay something, due to his short
                 // attendance in courses.
 
-                boolean forceCreation = entry.isCreateDebt() && entry.isForceCreation() && isRegistrationToPayGratuities
-                        && registration.getLastRegistrationState(executionYear) != null
-                        && registration.getLastRegistrationState(executionYear).isActive()
-                        && (!entry.isLimitToRegisteredOnExecutionYear() || registration.isFirstTime(rule.getExecutionYear()));
+                boolean forceCreation =
+                        entry.isCreateDebt() && entry.isForceCreation() && isRegistrationToPayGratuities && registration.getLastRegistrationState(
+                                executionYear) != null && registration.getLastRegistrationState(executionYear)
+                                .isActive() && (!entry.isLimitToRegisteredOnExecutionYear() || registration.isFirstTime(
+                                rule.getExecutionYear()));
 
                 if (entry.isToCreateAfterLastRegistrationStateDate()) {
                     final LocalDate lastRegisteredStateDate = TuitionServices.lastRegisteredDate(registration, executionYear);
@@ -447,8 +438,9 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
                     }
                 } else {
                     final LocalDate enrolmentDate = TuitionServices.enrolmentDate(registration, executionYear, forceCreation);
-                    boolean createdTuitions = TuitionServices.createInferedTuitionForRegistration(registration, executionYear,
-                            enrolmentDate, forceCreation);
+                    boolean createdTuitions =
+                            TuitionServices.createInferedTuitionForRegistration(registration, executionYear, enrolmentDate,
+                                    forceCreation);
 
                     if (createdTuitions) {
                         processingResult.markRuleMadeUpdates();
@@ -519,8 +511,9 @@ public class CreateDebtsStrategy implements IAcademicDebtGenerationRuleStrategy 
                         debitEntry.getPayorDebtAccount() != null ? debitEntry.getPayorDebtAccount() : debitEntry.getDebtAccount();
 
                 if (result.get(debtAccountOwnerOfDebitNote) == null) {
-                    DocumentNumberSeries documentNumberSeries = DocumentNumberSeries
-                            .findUniqueDefaultSeries(FinantialDocumentType.findForDebitNote(), rule.getFinantialEntity());
+                    DocumentNumberSeries documentNumberSeries =
+                            DocumentNumberSeries.findUniqueDefaultSeries(FinantialDocumentType.findForDebitNote(),
+                                    rule.getFinantialEntity());
 
                     DebitNote debitNote = DebitNote.create(debitEntry.getFinantialEntity(), debitEntry.getDebtAccount(), null,
                             documentNumberSeries, new DateTime(), new LocalDate(), null, Collections.emptyMap(), null, null);
